# ReactionListgen_

./: .gitignore  .ignore  README.md  User_tips.md  pyproject.toml  pytest.ini
docs/: architecture_ja.md  bromine_family_playbook_ja.md  chlorine_family_playbook_ja.md  current_species_inventory_ja.md  db_first_gas_phase_target_ja.md  gas_phase_only_target_gases_ja.md  molecular_excited_state_promotion_ja.md  molecular_excited_state_template_generation_ja.md  o2_electron_argon_ion_ja.md  operations_ja.md  production_catalog_design_ja.md  production_readiness_ja.md  semiconductor_process_gas_expansion_plan_ja.md  silicon_family_playbook_ja.md  source_acquisition_ja.md  source_backed_template_promotion_ja.md  source_update_recipes_ja.md  visualization_ja.md
examples/: aliases.yaml  build_lock.json  combined_evidence_snapshot.json  config.yaml  config_vamdc_live_template.yaml  output_network.json  pubchem_identity_frozen.json  source_inspection.json  source_profiles_override.yaml
examples/snapshots/: atct_snapshot.csv  (+17 more)
prb_v10_report_revised/: generate_report.py  plasma_reaction_builder_v10_report_revised_ja.docx  plasma_reaction_builder_v10_report_revised_ja.html  plasma_reaction_builder_v10_report_revised_ja.md
tests/: conftest.py  test_asd.py  test_atct.py  test_builder.py  test_evidence.py  test_excited_template_promotion.py  test_external_sources.py  test_formula.py  test_network_manifest.py  test_ops_v9.py  test_pubchem.py  test_runtime_audit.py  test_source_ops.py  test_state_catalog.py  test_state_promotion.py  test_template_promotion.py  test_visualization.py
(+161 files in other folders)
